--- a/Akun/pengaturan.html
+++ b/Akun/pengaturan.html
@@ -8,8 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pengaturan</title>
- <link rel="stylesheet" href="https://kosred.com/a/thqiiu.css">
-  
+  <link rel="stylesheet" href="https://kosred.com/a/thqiiu.css">
 </head>
 
 <body>
@@ -33,15 +32,16 @@
     <!-- Elemen UI untuk mengubah nama pengguna -->
     <label for="newUsername">Nama Pengguna Baru:</label>
     <input type="text" id="newUsername" placeholder="Masukkan nama pengguna baru">
-    <h3>peringatan!</h3>
-    <p>masukkan sandi saat ini untuk mengkonfirmasi!, Saat ganti sandi maupun ganti nama</p>
+    <h3>Peringatan!</h3>
+    <p>Masukkan sandi saat ini untuk mengkonfirmasi perubahan, baik pada ganti sandi maupun ganti nama.</p>
     <!-- Tombol untuk menyimpan perubahan -->
     <button id="saveChangesButton" onclick="saveChanges()">Simpan Perubahan</button>
   </div>
 
   <div id="floatingMessage"></div>
- <script src="https://kosred.com/a/klttyp.js"></script> 
-  <script src="https://kosred.com/a/kecjzg.js">
-      </script>
+  <script src="https://kosred.com/a/klttyp.js"></script> 
+  <script src="https://kosred.com/a/skgpfl.js">
+    
+  </script>
 </body>
 </html>
