--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google-site-verification" content="90FH8IYJXqwEllzVc0Ux4TdtNqW5NPpt_AumxpUMc7g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toko Kita hni</title>
+  <title>Toko halal mart suesti</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
 
@@ -29,7 +29,7 @@
   <div style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px;">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj_cL0RBMKKYnfURXOUeeTzU1j8y0CurmeNw&usqp=CAU" alt="" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
   </div>
-  <h1 style="margin-left: 2px;">Toko bu Eti</h1>
+  <h1 style="margin-left: 2px;">Halal mart suesti</h1>
 </div>
  <div id="userInfoCard">
          <img id="profilePicture" style="overflow: hidden; border-radius: 50%; width: 50px; height: 50px; margin-left: 0px;" alt="">
@@ -37,7 +37,7 @@
   <p id="userStatus"></p>  
 </div>
     <nav>
-      <a href="https://bit.ly/3tK6lrt">
+      <a href="https://tokokita-seven.vercel.app/">
         <i class="fas fa-home"></i> Beranda
       </a>
       <a href="Akun/profile.html">
@@ -117,7 +117,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
         <img src="https://i.ibb.co/pz3Xzsw/e2dbeb74c18d47cab10ce79bf773727a.jpg" alt="Susu">
         <h3>Susu Kambing</h3>
         <p>Susu kambing lebih mudah dicerna, kandungan gizi lebih lengkap, merupakan sumber kalsium, protein, asam amino, fosfor, kalium, riboflavin (vitamin B2).</p>
-        <p>Rp 75.000<i>wilayah 1&2(60/13)</i></p></p>
+        <p>Rp 75.000 <i>wilayah 1&2(60/13)</i></p></p>
         <button onclick="addToCart('Susu Kambing wilayah 1&2(60/20)', 75000, 'https://i.ibb.co/pz3Xzsw/e2dbeb74c18d47cab10ce79bf773727a.jpg')">Tambah ke Keranjang</button>
         <br>
         <hr>
@@ -146,7 +146,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
         <img src="https://id-test-11.slatic.net/original/d1f1955085562dd811d7a661fb93ed4b.jpg" alt="sabun">
         <h3>Sabun kolagen</h3>
         <p>Susu kambing lebih mudah dicerna, kandungan gizi lebih lengkap, merupakan sumber kalsium, protein, asam amino, fosfor, kalium, riboflavin (vitamin B2).</p>
-        <p>Rp 25.000<i>wilayah 1&2(20/6)</i></p></p>
+        <p>Rp 25.000 <i>wilayah 1&2(20/6)</i></p></p>
         <button onclick="addToCart('Sabun kolagen wilayah 1&2(20/6)', 25000, 'https://id-test-11.slatic.net/original/d1f1955085562dd811d7a661fb93ed4b.jpg')">Tambah ke Keranjang</button>
         <br>
         <hr>
@@ -189,7 +189,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Toko bu Eti</p>
+    <p>&copy; 2024 Toko halal mart Suesti</p>
   </footer>
    
   <script src="https://kosred.com/a/klttyp.js"></script> 
