--- a/Member/indexmember.html
+++ b/Member/indexmember.html
@@ -331,7 +331,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
         <img src="https://i.ibb.co/pz3Xzsw/e2dbeb74c18d47cab10ce79bf773727a.jpg" alt="Susu">
         <h3>Susu Kambing</h3>
         <p>Susu kambing lebih mudah dicerna, kandungan gizi lebih lengkap, merupakan sumber kalsium, protein, asam amino, fosfor, kalium, riboflavin (vitamin B2).</p>
-        <p>Rp 60.000<i>wilayah 1&2(60/13)</i></p></p>
+        <p>Rp 60.000 <i>wilayah 1&2(60/13)</i></p></p>
         <button onclick="addToCart('Susu Kambing wilayah 1&2(60/20)', 60000, 'https://i.ibb.co/pz3Xzsw/e2dbeb74c18d47cab10ce79bf773727a.jpg')">Tambah ke Keranjang</button>
         <br>
         <hr>
@@ -360,7 +360,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
         <img src="https://id-test-11.slatic.net/original/d1f1955085562dd811d7a661fb93ed4b.jpg" alt="sabun">
         <h3>Sabun kolagen</h3>
         <p>Susu kambing lebih mudah dicerna, kandungan gizi lebih lengkap, merupakan sumber kalsium, protein, asam amino, fosfor, kalium, riboflavin (vitamin B2).</p>
-        <p>Rp 20.000<i>wilayah 1&2(20/6)</i></p></p>
+        <p>Rp 20.000 <i>wilayah 1&2(20/6)</i></p></p>
         <button onclick="addToCart('Sabun kolagen wilayah 1&2(20/6)', 20000, 'https://id-test-11.slatic.net/original/d1f1955085562dd811d7a661fb93ed4b.jpg')">Tambah ke Keranjang</button>
         <br>
         <hr>
@@ -419,7 +419,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     }, 3000); // Ubah angka 2000 menjadi durasi yang diinginkan dalam milidetik
 });    
 </script>
-<script src="https://kosred.com/a/kdmxlu.js">
+<script src="https://kosred.com/a/bhtook.js">
     
 </script>
 </body>
