--- a/Admin/Admin.html
+++ b/Admin/Admin.html
@@ -137,7 +137,7 @@ width: 100%;
 
     if (!user.emailVerified) {
       // Jika akun belum terverifikasi, arahkan ke halaman index.html
-      window.location.href = 'https://bit.ly/3tK6lrt';
+      window.location.href = 'https://tokokita-seven.vercel.app/';
     }
 
     loadData();
