--- a/Akun/login.html
+++ b/Akun/login.html
@@ -19,7 +19,7 @@
 <body>
   <!-- Form Login -->
   <form id="loginForm">
-      <a id="back-link" href="https://bit.ly/3tK6lrt"><i class="fas fas fa-home"></i>Home</a>
+      <a id="back-link" href="https://tokokita-seven.vercel.app/"><i class="fas fas fa-home"></i>Home</a>
     <h2>Login</h2>
 
     <label for="email">Email:</label>
@@ -37,7 +37,7 @@
   <div id="notification"></div>
 
   <!-- Your login.js script -->
-  <script src="https://kosred.com/a/afwewz.js">
+  <script src="https://kosred.com/a/luevjc.js">
     
   </script>
 </body>
