--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="slide">
-      <img src="https://hni.id/themes/landing-page/assets/pgh-sensitif/pgh-sensitif-header.png" alt="Gambar 2">
+      <img src="https://lh3.googleusercontent.com/p/AF1QipMvYwiQx0SwJvOqA2Nx6g06GjyCCN-2u14vilUc=w1080-h608-p-no-v0" alt="Gambar 2">
       <div class="slide-text-container">
         <p class="slide-text"></p>
       </div>
