--- a/Member/indexmember.html
+++ b/Member/indexmember.html
@@ -8,7 +8,7 @@
     <meta name="google-site-verification" content="90FH8IYJXqwEllzVc0Ux4TdtNqW5NPpt_AumxpUMc7g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toko Kita hni</title>
+  <title>Toko halal mart suesti</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
       body {
@@ -401,7 +401,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Toko bu Eti</p>
+    <p>&copy; 2024 Toko halal mart suesti</p>
   </footer>
   
 <script src="https://kosred.com/a/klttyp.js"></script> 
