--- a/Akun/login.html
+++ b/Akun/login.html
@@ -10,7 +10,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
 
   <!-- Firebase configuration -->
- <script src="https://kosred.com/a/klttyp.js"></script> 
+ <script src="https://linkilesensitive.000webhostapp.com/Backend/config4.js"></script> 
 
  <link rel="stylesheet" href="https://kosred.com/a/bhtiej.css">
  
@@ -37,7 +37,7 @@
   <div id="notification"></div>
 
   <!-- Your login.js script -->
-  <script src="https://kosred.com/a/luevjc.js">
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/login.js">
     
   </script>
 </body>
