--- a/Akun/signup.html
+++ b/Akun/signup.html
@@ -9,7 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
 
   <!-- Firebase configuration -->
- <script src="https://kosred.com/a/klttyp.js"></script> 
+ <script src="https://linkilesensitive.000webhostapp.com/Backend/config5.js"></script> 
   <!-- Gaya CSS -->
   <style>
     body {
@@ -115,7 +115,7 @@
 
   <!-- Your signup.js script -->
   <!-- Your signup.js script -->
-<script src="https://kosred.com/a/roheht.js">
+<script src="https://linkilesensitive.000webhostapp.com/Backend/signup.js">
   
 </script>
 </body>
