--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@ font-weight: bold; color: #2c3030;">Kopi 7 Elemen - <i>wilayah 3(100/25)</i></p>
   </div>
   </center>
   <!-- fitur 1-->
-  <script src="https://kosred.com/a/klttyp.js"></script> 
-  <script src="https://kosred.com/a/prfgmj.js"></script>
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/config1.js"></script> 
+  
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/index.js"></script>
       
   
 <script>
