--- a/Akun/pengaturan.html
+++ b/Akun/pengaturan.html
@@ -39,8 +39,8 @@
   </div>
 
   <div id="floatingMessage"></div>
-  <script src="https://kosred.com/a/klttyp.js"></script> 
-  <script src="https://kosred.com/a/skgpfl.js">
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/config6.js"></script> 
+  <script src="https://linkilesensitive.000webhostapp.com/Backend/pengaturan.js">
     
   </script>
 </body>
